2002-01-07  Mark Mitchell  <mark@codesourcery.com>

	* scripts/qm-release (build_source): Remove QMTrack from
	the release tarball.

	* NEWS: New file.
	
	* qm/queue.py: New file.
	* qm/test/base.py (get_extension_class_names_in_directory): Remove
	debugging statement.
	* qm/test/cmdline.py (web.web): Do not import it unconditionally.
	(QMTest.__ExecuteServer): Import it here.
	* qm/test/execution_engine.py (Queue): Do not import it.
	(qm.queue): Import it.
	(ExecutionEngine.__init__): Use qm.queue.Queue, not Queue.Queue.
	(ExecutionEngine.__CheckForResponse): Use qm.queue.Empty, not
	Queue.Empty.
	
	* qm/test/execution_engine.py (ExecutionEngine.Run): Pass 
	self to Target.Start.
	(ExecutionEngine._RunTests): Do not add untested results for
	tests that were not run if immediate termination was requested.
	(ExecutionEngine._AddResult): Do not assume that Result.TARGET
	will be present for all results.
	* qm/test/target.py (Target.Start): Add engine parameter.
	(Target.RunTest): Handle KeyboardInterrupts by stopping the
	execution engine.
	(Target._SetUpResource): Likewise.
	* qm/test/classes/rsh_target.py (RSHTarget.Start): Add engine
	parameter.
	* qm/test/classes/rsh_target.py (ThreadTarget.Start): Likewise.

	* qm/label.py (__label_regex): Add hyphens.
	(__label_regex_with_sep): Likewise.
	* qm/xmlutil.py (discard_node): Implement with
	xml.dom.ext.ReleaseNode.
	* qm/test/context.py (Context.ValidateKey): Allow hyphens.
	* qm/test/execution_engine.py (ExecutionEngine._RunTests): Keep
	the list of idle targets up to date.
	(ExecutionEngine._AddResult): Likewise.
	* qm/test/text_result_stream.py (TextResultStream._DisplayResult):
	Use XPASS and XFAIL where possible.
	(TextResultStream._WriteOutcome): New method.
	* qm/test/classes/ThreadTarget.py (TestResultStream.RunTest): Add
	assertions.
	* qm/test/share/messages/diagnostics.txt: Update documentation
	about labels.
	* qm/test/share/messages/help.txt: Likewise.